changes to website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio Starter</title>
+    <title>Tracy's Portfolio</title>
 
     <!-- Bootstrap core CSS Modules-->
     <link href="./tools/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -28,8 +28,21 @@
 </head>
 
 <body>
-
-   
+<!-- Header -->
+<header style="text-align:center; color: purple;"></header>
+<div class="jumbotron jumbotron-billboard">
+    <div class="img"></div>
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                <header style="text-align:center">
+                <h1>Tracy Desserich</h1>
+                  <h2>Junior Developer</h2>
+              </div>
+          </div>
+      </div>
+  </div>
+</header> 
  
     <!--==========================
   Scripts Section
@@ -47,5 +60,4 @@
     <script src="js/main.min.js"></script>
 
 </body>
-
 </html>
