--- a/indexbackup.html
+++ b/indexbackup.html
@@ -24,154 +24,263 @@
     <link rel="stylesheet" href="./tools/animate.css/animate.min.css">
     <link rel="stylesheet" href="./tools/magnific-popup/magnific-popup.css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 
 <body>
+    <!-- Navbar -->
+    <nav id="header" class="navbar navbar-fixed-top">
+        <div id="header-container" class="container-fluid navbar-container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active">
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#aboutMe">About Me</a>
+                    </li>
+                    <li>
+                        <a href="#projects">Projects</a>
+                    </li>
+                    <li>
+                        <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view?usp=sharing" target="blank">Resume</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.nav-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+    <!-- /.navbar -->
     <!-- Header -->
     <header>
         <div class="jumbotron jumbotron-billboard">
             <div class="img"></div>
             <div class="container">
-                <div class="row">
+                    <div class="wow pulse">
+                        <div class="row">
                     <div class="col-lg-12">
-                        <header style="text-align:center">
+                        <div style="text-align:center">
                             <h1>Tracy Desserich</h1>
                             <h2>Junior Developer</h2>
-                            <!-- Navbar -->
-                            <nav id="header" class="navbar navbar-fixed-top">
-                                <div id="header-container" class="container navbar-container">
-                                    <div class="navbar-header">
-                                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-                                            aria-controls="navbar">
-                                            <span class="sr-only">Toggle navigation</span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                            <span class="icon-bar"></span>
-                                        </button>
-                                    </div>
-                                    <div id="navbar" class="collapse navbar-collapse">
-                                        <ul class="nav navbar-nav">
-                                            <li class="active">
-                                                <a href="#">Home</a>
-                                            </li>
-                                            <li>
-                                                <a href="#about">About</a>
-                                            </li>
-                                            <li>
-                                                <a href="#portfolio">Portfolio</a>
-                                            </li>
-                                            <li>
-                                                <a href="#skills">Skills</a>
-                                            </li>
-                                            <li>
-                                                <a href="#resume">Resume</a>
-                                            </li>
-                                            <li>
-                                                <a href="#contact">Contact</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <!-- /.nav-collapse -->
-                                </div>
-                                <!-- /.container -->
-                            </nav>
-                            <!-- /.navbar -->
+                        </div>
                     </div>
                 </div>
+               </div> 
             </div>
-
         </div>
-        </header>
-        <!-- Body -->
-
-        <body>
-            <!-- Portfolio   -->
-            <div class="row">
-                <h2>Projects</h2>
+    </header>
+    <!-- Body -->
+    <hr>
+    <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.5s">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <h2 class="quote">"...technology alone is not enough. It’s technology married with liberal arts, married with the humanities,
+                    that yields the results that make our hearts sing.” - Steve Jobs</h2>
             </div>
-            <!-- CSS Creature -->
-            <div class="row">
-                    <div class="col-md-4">
-                      <div class="thumbnail">
-                            <img class="bunny" img src="../assets/bunny.jpg">
-                          <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank"></href><h3>CSS Creature</h3>
-                      </div>
-                    </div>
-            <!-- Storefront -->
-            <div class="col-md-4">
-                    <div class="thumbnail">
-                            <img class="storefront" img src="../assets/VN-storefront.jpg">
-                        <a href="https://tdesserich.github.io/Storefront/" target="blank"><h3>Storefront</h3>
-                    </div>
-                  </div>
-            <!-- API project  -->
-            <div class="col-md-4">
-                    <div class="thumbnail">
-                            <img class="API" img src="../assets/API.jpg">
-                            <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank">
-                                <h3 class="card-title">API Project</h3>
-                    </div>
-                  </div>
-            <!-- JS Code -->
-            <div class="row">
-                <div class="col-md-4">
-                  <div class="thumbnail">
-                        <img class="JSrepo" img src="../assets/JSicon.jpg">
-                      <a href="https://github.com/tdesserich" target="blank"></href><h3>JavaScript Library</h3>
-                  </div>
-                </div>
+        </div>
+    </div>
+    </section>
+    <!-- About Me -->
+    <div id="aboutMe"></div>
+    <hr>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="column-md-12 marginLeft">
+                <h2>About Me</h2>
             </div>
-            
+        </div>
+        <div class="row">
+            <div class="col-md-5 col-md-offset-2">
+                <br>
+                <p style="text-align:left">My career as a coder is just beginning with my education at
+                    <a href="https://www.elevenfifty.org/" target="blank" style="color: green">Eleven Fifty Academy</a>, where I am learning HTML, CSS/SCSS, Bootstrap, JavaScript, React, Node, Firebase,
+                    and Angular. However, my previous work experience and education have already set me up for success in
+                    this new venture. I have a Bachelor of Arts in Sociology from Indiana University and Master of Science
+                    in Management from Indiana Wesleyan University, as well as a certificate in Nonprofit Management. I spent
+                    15 years as a nonprofit director and fundraiser, where I developed expertise in project management, problem
+                    solving, leadership, team building, research, organization, communication, and writing. As Steve Jobs
+                    famously said, "...technology alone is not enough. It’s technology married with liberal arts, married
+                    with the humanities, that yields the results that make our hearts sing.” I am excited to start marrying
+                    my previous experience with my new development skills as I begin this new adventure in tech!
+                </p>
+                <br>
+                <p style="text-align: left">Please find me on
+                    <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
+                    <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
+                    <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view" target-="blank" style="color: green">resume.</a>
+                </p>
+                <br>
             </div>
-
-
-
-
-            <!-- About Me -->
-        <div container>
-            <div class="marginLeft">
-            <div id="aboutMe">
-                <div class="marginTop"></div>
-                <div class="row">
-                    <div class="col-lg-8">
-                        <h2 class="portfolio">About Me</h2>
-                        <p style="text-align: left">Lorem ipsum dolor sit amet, vivamus egestas. Nec duis sed consectetuer libero sapiente, ac blandit
-                            suspendisse porttitor sed. Ac lacus semper nisl, purus libero nascetur ante, risus massa sed
-                            suspendisse in vestibulum suspendisse, aut ligula aliquam hendrerit nec at phasellus, qui non.
-                            In eu odio, in pede, vel tempus venenatis adipiscing. Cras magna dis suspendisse faucibus facilisi
-                            accumsan. Sociis neque morbi, eget tempor, interdum rem quam class lacus. Nec aliquet sed donec
-                            imperdiet viverra non, tempor ligula sit vitae quam rhoncus, ante ut. Blandit morbi. Bibendum
-                            magnis blandit molestie id quam, in ullamcorper id scelerisque ante eu, tempor wisi integer at
-                            non orci, curabitur est nonummy sit non vehicula ad, consectetuer ac elementum adipiscing dui.
-                            Eu eleifend libero, sapien tincidunt arcu tellus sodales, convallis erat urna eros purus blandit,
-                            cras id pede fugit mauris erat. Nullam venenatis, duis interdum elit euismod aute, nunc dignissim
-                            mauris, semper varius. Ut nulla lectus id nulla cursus, porta bibendum adipiscing ligula sit
-                            non sit. Eleifend lectus ut vestibulum parturient vestibulum nec.</p>
-                    </div>
-                    <div class="col-lg-4">
-                        <img class="headshot" img src="../assets/headshot.jpg">
-                    </div>
+            <div class="col-md-3">
+                <div class="marginTop">
+                    <img class="headshot" img src="../assets/headshot.jpg">
                 </div>
             </div>
         </div>
     </div>
+    <br>
+    <!-- Portfolio   -->
+    <div id="projects"></div>
+    <hr>
+    <br>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="column-md-12 marginLeft">
+                <h2>Projects</h2>
+            </div>
+        </div>
+    </div>
+    <br>
+    <!-- CSS Creature -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 col-md-offset-2">
+                <div class="thumbnail">
+                    <img class="bunny" img src="../assets/bunny.jpg" />
+                    <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
+                        <h3>CSS Creature</h3>
+                    </a>
+                </div>
+            </div>
+            <!-- Storefront -->
+            <div class="col-md-2">
+                <div class="thumbnail">
+                    <img class="storefront" img src="../assets/VN-storefront.jpg" />
+                    <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
+                        <h3>Storefront</h3>
+                    </a>
+                </div>
+            </div>
+            <!-- API project  -->
+            <div class="col-md-2">
+                <div class="thumbnail">
+                    <img class="API" img src="../assets/API.jpg" />
+                    <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
+                        <h3 class="card-title">API Project</h3>
+                    </a>
+                </div>
+            </div>
+            <!-- JS Library -->
+            <div class="col-md-2">
+                <div class="thumbnail">
+                    <img class="JSrepo" img src="../assets/JSicon.jpg" />
+                    <a href="https://github.com/tdesserich" target="blank" style="color: green">
+                        <h3>JavaScript Library</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contianer-fluid">
+        <div class="row">
+            <div class="col-lg-12">
+                <br>
+                <!-- Contact Me -->
+                <hr>
+                <div id="contact"></div>
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="column-md-12 marginLeft">
+                <h2>Contact Me</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <form action="https://formspree.io/tdesserich@gmail.com" method="POST">
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Name</label>
+                            <input type="text" class="form-control" placeholder="Your Name" id="name" required="" data-validation-required-message="Please enter your name"
+                                name="name" />
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Email Address</label>
+                            <input type="email" class="form-control" placeholder="Your Email" id="email" required="" data-validation-required-message="Please enter your email"
+                                name="_replyto" />
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <div class="form-group">
+                            <label>Message</label>
+                            <textarea class="form-control" rows="7" placeholder="Your Message" id="message" required="" data-validation-required-message="Please leave a message"
+                                name="message"></textarea>
+                        </div>
+                    </div>
+                    <div id="success"></div>
+                    <button type="submit" class="btn btn-lg btn-black">
+                        <i class="" aria-hidden="true"></i>Send Message</button>
+                </form>
+            </div>
+        </div>
+        <br>
+        <br>
+    </div>
+    <!--Footer-->
+    <div class="container-fluid footer">
+        <div class="row">
+            <div class="col=md-12">
+                <div class="text-center text-md-right">
+                    <ul class="list-unstyled list-inline">
+                        <li>
+                            <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view?usp=sharing" target="blank">
+                                <i class="fa fa-briefcase"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank">
+                                <i class="fa fa-linkedin"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/tdesserich" target="blank">
+                                <i class="fa fa-github"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <p> © 2018 tdesserich </p>
+        </div>
+    </div>
+    <!--/Footer-->
 
-
-            <!--==========================
+    <!--==========================
   Scripts Section
   ============================-->
 
-            <!-- Bootstrap & jQuery Scripts - Note: jQuery must be first -->
-            <script src="./tools/jquery/jquery.min.js"></script>
-            <script src="./tools/bootstrap/js/bootstrap.min.js"></script>
+    <!-- Bootstrap & jQuery Scripts - Note: jQuery must be first -->
+    <script src="./tools/jquery/jquery.min.js"></script>
+    <script src="./tools/bootstrap/js/bootstrap.min.js"></script>
 
-            <!-- jQuery 3rd Party Scripts-->
-            <script src="./tools/wowjs/wow.min.js"></script>
-            <script src="./tools/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <!-- jQuery 3rd Party Scripts-->
+    <script src="./tools/wowjs/wow.min.js"></script>
+    <script src="./tools/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-            <!-- Custom scripts for this template -->
-            <script src="js/main.min.js"></script>
+    <!-- Custom scripts for this template -->
+    <script src="js/main.min.js"></script>
 
-        </body>
+</body>
 
 </html>
