TD added photos

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-3">
                 <div class="marginTop">
-                    <img class="headshot" img src="../assets/headshot.jpg">
+                    <img class="headshot" img src="./assets/headshot.jpg">
                 </div>
             </div>
         </div>
@@ -149,7 +149,7 @@
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
                 <div class="thumbnail">
-                    <img class="bunny" img src="../assets/bunny.jpg" />
+                    <img class="bunny" img src="./assets/bunny.jpg" />
                     <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
                         <h3>CSS Creature</h3>
                     </a>
