--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <!-- Storefront -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="storefront" img src="../assets/VN-storefront.jpg" />
+                    <img class="storefront" img src="./assets/VN-storefront.jpg" />
                     <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
                         <h3>Storefront</h3>
                     </a>
@@ -167,7 +167,7 @@
             <!-- API project  -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="API" img src="../assets/API.jpg" />
+                    <img class="API" img src="./assets/API.jpg" />
                     <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
                         <h3 class="card-title">API Project</h3>
                     </a>
@@ -176,7 +176,7 @@
             <!-- JS Library -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="JSrepo" img src="../assets/JSicon.jpg" />
+                    <img class="JSrepo" img src="./assets/JSicon.jpg" />
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">
                         <h3>JavaScript Library</h3>
                     </a>
