added API project

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <!-- API project  -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="API" img src="./assets/API.jpg" />
+                    <img class="API" img src="./assets/API-2.jpg" />
                     <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
                         <h3 class="card-title">API Project</h3>
                     </a>
