--- a/indexbackup.html
+++ b/indexbackup.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-12">
                         <div style="text-align:center">
                             <h1>Tracy Desserich</h1>
-                            <h2>Junior Developer</h2>
+                            <h2>Web Developer</h2>
                         </div>
                     </div>
                 </div>
@@ -82,8 +82,7 @@
         </div>
     </header>
     <!-- Body -->
-    <hr>
-    <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.5s">
+    <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.01s">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
@@ -112,7 +111,7 @@
                     this new venture. I have a Bachelor of Arts in Sociology from Indiana University and Master of Science
                     in Management from Indiana Wesleyan University, as well as a certificate in Nonprofit Management. I spent
                     15 years as a nonprofit director and fundraiser, where I developed expertise in project management, problem
-                    solving, leadership, team building, research, organization, communication, and writing. As Steve Jobs
+                    solving, leadership, team building, research, organization, time management, communication, and writing. As Steve Jobs
                     famously said, "...technology alone is not enough. It’s technology married with liberal arts, married
                     with the humanities, that yields the results that make our hearts sing.” I am excited to start marrying
                     my previous experience with my new development skills as I begin this new adventure in tech!
@@ -121,13 +120,13 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
-                    <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view" target-="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/file/d/1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy/view?usp=sharing" target-="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
             <div class="col-md-3">
                 <div class="marginTop">
-                    <img class="headshot" img src="../assets/headshot.jpg">
+                    <img class="headshot" img src="./assets/headshot.jpg">
                 </div>
             </div>
         </div>
@@ -150,7 +149,7 @@
         <div class="row">
             <div class="col-md-2 col-md-offset-2">
                 <div class="thumbnail">
-                    <img class="bunny" img src="../assets/bunny.jpg" />
+                    <img class="bunny" img src="./assets/bunny.jpg" />
                     <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
                         <h3>CSS Creature</h3>
                     </a>
@@ -159,7 +158,7 @@
             <!-- Storefront -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="storefront" img src="../assets/VN-storefront.jpg" />
+                    <img class="storefront" img src="./assets/VN-storefront.jpg" />
                     <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
                         <h3>Storefront</h3>
                     </a>
@@ -168,7 +167,7 @@
             <!-- API project  -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="API" img src="../assets/API.jpg" />
+                    <img class="API" img src="./assets/API-2.jpg" />
                     <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
                         <h3 class="card-title">API Project</h3>
                     </a>
@@ -177,7 +176,7 @@
             <!-- JS Library -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="JSrepo" img src="../assets/JSicon.jpg" />
+                    <img class="JSrepo" img src="./assets/JSicon.jpg" />
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">
                         <h3>JavaScript Library</h3>
                     </a>
@@ -234,6 +233,8 @@
         </div>
         <br>
         <br>
+        <br>
+        <br>
     </div>
     <!--Footer-->
     <div class="container-fluid footer">
@@ -242,7 +243,7 @@
                 <div class="text-center text-md-right">
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view?usp=sharing" target="blank">
+                            <a href="https://drive.google.com/file/d/1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy/view?usp=sharing" target="blank">
                                 <i class="fa fa-briefcase"></i>
                             </a>
                         </li>
@@ -261,7 +262,7 @@
             </div>
         </div>
         <div class="row">
-            <p> © 2018 tdesserich </p>
+            <p> © Copyright 2018 tdesserich </p>
         </div>
     </div>
     <!--/Footer-->
