--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-12">
                         <div style="text-align:center">
                             <h1>Tracy Desserich</h1>
-                            <h2>Junior Developer</h2>
+                            <h2>Web Developer</h2>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     this new venture. I have a Bachelor of Arts in Sociology from Indiana University and Master of Science
                     in Management from Indiana Wesleyan University, as well as a certificate in Nonprofit Management. I spent
                     15 years as a nonprofit director and fundraiser, where I developed expertise in project management, problem
-                    solving, leadership, team building, research, organization, communication, and writing. As Steve Jobs
+                    solving, leadership, team building, research, organization, time management, communication, and writing. As Steve Jobs
                     famously said, "...technology alone is not enough. It’s technology married with liberal arts, married
                     with the humanities, that yields the results that make our hearts sing.” I am excited to start marrying
                     my previous experience with my new development skills as I begin this new adventure in tech!
@@ -120,7 +120,7 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
-                    <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view" target-="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target-="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
@@ -243,7 +243,7 @@
                 <div class="text-center text-md-right">
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view?usp=sharing" target="blank">
+                            <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank">
                                 <i class="fa fa-briefcase"></i>
                             </a>
                         </li>
