--- a/indexbackup.html
+++ b/indexbackup.html
@@ -120,7 +120,7 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
-                    <a href="https://drive.google.com/file/d/1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy/view?usp=sharing" target-="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target-="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
@@ -243,7 +243,7 @@
                 <div class="text-center text-md-right">
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <a href="https://drive.google.com/file/d/1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy/view?usp=sharing" target="blank">
+                            <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank">
                                 <i class="fa fa-briefcase"></i>
                             </a>
                         </li>
