--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-12">
                         <div style="text-align:center">
                             <h1>Tracy Desserich</h1>
-                            <h2>Web Developer</h2>
+                            <h2>Developer</h2>
                         </div>
                     </div>
                 </div>
