--- a/indexbackup.html
+++ b/indexbackup.html
@@ -51,7 +51,7 @@
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="https://drive.google.com/file/d/11-4H34FoAT49xiQ-poYYQuh2gJqlPJi-/view?usp=sharing" target="blank">Resume</a>
+                        <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank">Resume</a>
                     </li>
                     <li>
                         <a href="#contact">Contact Me</a>
