--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="col-lg-12">
                         <div style="text-align:center">
                             <h1>Tracy Desserich</h1>
-                            <h2>Developer</h2>
+                            <h2>Web Developer</h2>
                         </div>
                     </div>
                 </div>
@@ -120,7 +120,7 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
-                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target-="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
