--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-5 col-md-offset-2">
+            <div class="col-md-6 col-md-offset-2">
                 <br>
                 <p style="text-align:left">My career as a coder is just beginning with my education at
                     <a href="https://www.elevenfifty.org/" target="blank" style="color: green">Eleven Fifty Academy</a>, where I am learning HTML, CSS/SCSS, Bootstrap, JavaScript, React, Node, Firebase,
@@ -167,7 +167,8 @@
             <!-- API project  -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="API" img src="./assets/API-2.jpg" />
+                    <img class="API" img src="./assets/API.jpg" />
+<!-- NEED WEBSITE HERE                     -->
                     <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
                         <h3 class="card-title">API Project</h3>
                     </a>
@@ -176,9 +177,9 @@
             <!-- JS Library -->
             <div class="col-md-2">
                 <div class="thumbnail">
-                    <img class="JSrepo" img src="./assets/JSicon.jpg" />
+                    <img class="JSrepo" img src="./assets/github.jpg" />
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">
-                        <h3>JavaScript Library</h3>
+                        <h3>Github</h3>
                     </a>
                 </div>
             </div>
