--- a/indexbackup.html
+++ b/indexbackup.html
@@ -120,7 +120,7 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
-                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target-="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
@@ -184,14 +184,16 @@
             </div>
         </div>
     </div>
+    <br>
     <div class="contianer-fluid">
         <div class="row">
             <div class="col-lg-12">
                 <br>
                 <!-- Contact Me -->
                 <hr>
-                <div id="contact"></div>
                 <br>
+                <br>  
+                <div id="contact"></div>
             </div>
         </div>
     </div>
@@ -201,6 +203,7 @@
                 <h2>Contact Me</h2>
             </div>
         </div>
+        <br>
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <form action="https://formspree.io/tdesserich@gmail.com" method="POST">
