--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <br>
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
-                    <a href="https://github.com/tdesserich" target="blank" style="color: green">Github</a> library, or download my
+                    <a href="https://github.com/tdesserich" target="blank" style="color: green">GitHub</a> library, or download my
                     <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank" style="color: green">resume.</a>
                 </p>
                 <br>
@@ -179,7 +179,7 @@
                 <div class="thumbnail">
                     <img class="JSrepo" img src="./assets/github.jpg" />
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">
-                        <h3>Github</h3>
+                        <h3>GitHub</h3>
                     </a>
                 </div>
             </div>
