--- a/index.html
+++ b/index.html
@@ -68,29 +68,29 @@
         <div class="jumbotron jumbotron-billboard">
             <div class="img"></div>
             <div class="container">
-                    <div class="wow pulse">
-                        <div class="row">
-                    <div class="col-lg-12">
-                        <div style="text-align:center">
-                            <h1>Tracy Desserich</h1>
-                            <h2>Web Developer</h2>
+                <div class="wow pulse">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div style="text-align:center">
+                                <h1>Tracy Desserich</h1>
+                                <h2>Web Developer</h2>
+                            </div>
                         </div>
                     </div>
                 </div>
-               </div> 
             </div>
         </div>
     </header>
     <!-- Body -->
     <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.01s">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <h2 class="quote">"...technology alone is not enough. It’s technology married with liberal arts, married with the humanities,
-                    that yields the results that make our hearts sing.” - Steve Jobs</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <h2 class="quote">"...technology alone is not enough. It’s technology married with liberal arts, married with the humanities,
+                        that yields the results that make our hearts sing.” - Steve Jobs</h2>
+                </div>
             </div>
         </div>
-    </div>
     </section>
     <!-- About Me -->
     <div id="aboutMe"></div>
@@ -111,10 +111,11 @@
                     this new venture. I have a Bachelor of Arts in Sociology from Indiana University and Master of Science
                     in Management from Indiana Wesleyan University, as well as a certificate in Nonprofit Management. I spent
                     15 years as a nonprofit director and fundraiser, where I developed expertise in project management, problem
-                    solving, leadership, team building, research, organization, time management, communication, and writing. As Steve Jobs
-                    famously said, "...technology alone is not enough. It’s technology married with liberal arts, married
-                    with the humanities, that yields the results that make our hearts sing.” I am excited to start marrying
-                    my previous experience with my new development skills as I begin this new adventure in tech!
+                    solving, leadership, team building, research, organization, time management, communication, and writing.
+                    As Steve Jobs famously said, "...technology alone is not enough. It’s technology married with liberal
+                    arts, married with the humanities, that yields the results that make our hearts sing.” I am excited to
+                    start marrying my previous experience with my new development skills as I begin this new adventure in
+                    tech!
                 </p>
                 <br>
                 <p style="text-align: left">Please find me on
@@ -134,57 +135,59 @@
     <br>
     <!-- Portfolio   -->
     <div id="projects"></div>
-    <hr>
-    <br>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="column-md-12 marginLeft">
-                <h2>Projects</h2>
-            </div>
-        </div>
-    </div>
-    <br>
-    <!-- CSS Creature -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2 col-md-offset-2">
-                <div class="thumbnail">
-                    <img class="bunny" img src="./assets/bunny.jpg" />
-                    <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
-                        <h3>CSS Creature</h3>
-                    </a>
-                </div>
-            </div>
-            <!-- Storefront -->
-            <div class="col-md-2">
-                <div class="thumbnail">
-                    <img class="storefront" img src="./assets/VN-storefront.jpg" />
-                    <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
-                        <h3>Storefront</h3>
-                    </a>
-                </div>
-            </div>
-            <!-- API project  -->
-            <div class="col-md-2">
-                <div class="thumbnail">
-                    <img class="API" img src="./assets/API.jpg" />
-<!-- NEED WEBSITE HERE                     -->
-                    <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
-                        <h3 class="card-title">API Project</h3>
-                    </a>
-                </div>
-            </div>
-            <!-- JS Library -->
-            <div class="col-md-2">
-                <div class="thumbnail">
-                    <img class="JSrepo" img src="./assets/github.jpg" />
-                    <a href="https://github.com/tdesserich" target="blank" style="color: green">
-                        <h3>GitHub</h3>
-                    </a>
+    <section class="wow slideInRight" data-wow-duration="2s" data-wow-delay="0.01s">
+        <hr>
+        <br>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="column-md-12 marginLeft">
+                    <h2>Projects</h2>
                 </div>
             </div>
         </div>
-    </div>
+        <br>
+        <!-- CSS Creature -->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-2 col-md-offset-2">
+                    <div class="thumbnail">
+                        <img class="bunny" img src="./assets/bunny.jpg" />
+                        <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
+                            <h3>CSS Creature</h3>
+                        </a>
+                    </div>
+                </div>
+                <!-- Storefront -->
+                <div class="col-md-2">
+                    <div class="thumbnail">
+                        <img class="storefront" img src="./assets/VN-storefront.jpg" />
+                        <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
+                            <h3>Storefront</h3>
+                        </a>
+                    </div>
+                </div>
+                <!-- API project  -->
+                <div class="col-md-2">
+                    <div class="thumbnail">
+                        <img class="API" img src="./assets/API.jpg" />
+                        <!-- NEED WEBSITE HERE                     -->
+                        <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
+                            <h3 class="card-title">API Project</h3>
+                        </a>
+                    </div>
+                </div>
+                <!-- JS Library -->
+                <div class="col-md-2">
+                    <div class="thumbnail">
+                        <img class="JSrepo" img src="./assets/github.jpg" />
+                        <a href="https://github.com/tdesserich" target="blank" style="color: green">
+                            <h3>GitHub</h3>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <br>
     <div class="contianer-fluid">
         <div class="row">
@@ -193,7 +196,7 @@
                 <!-- Contact Me -->
                 <hr>
                 <br>
-                <br>  
+                <br>
                 <div id="contact"></div>
             </div>
         </div>
