--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="thumbnail">
                         <img class="bunny" img src="./assets/bunny.jpg" />
                         <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
-                            <h3>CSS Creature</h3>
+                            <h3 style="text-align: center">CSS Creature</h3>
                         </a>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <div class="thumbnail">
                         <img class="storefront" img src="./assets/VN-storefront.jpg" />
                         <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
-                            <h3>Storefront</h3>
+                            <h3 style="text-align: center">Storefront</h3>
                         </a>
                     </div>
                 </div>
@@ -170,9 +170,8 @@
                 <div class="col-md-2">
                     <div class="thumbnail">
                         <img class="API" img src="./assets/API.jpg" />
-                        <!-- NEED WEBSITE HERE                     -->
-                        <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
-                            <h3 class="card-title">API Project</h3>
+                        <a href="https://star-wars-api-project.firebaseapp.com" target="blank" style="color: green">
+                            <h3 style="text-align: center">API Project</h3>
                         </a>
                     </div>
                 </div>
@@ -181,7 +180,7 @@
                     <div class="thumbnail">
                         <img class="JSrepo" img src="./assets/github.jpg" />
                         <a href="https://github.com/tdesserich" target="blank" style="color: green">
-                            <h3>GitHub</h3>
+                            <h3 style="text-align: center">GitHub</h3>
                         </a>
                     </div>
                 </div>
