--- a/indexbackup.html
+++ b/indexbackup.html
@@ -51,7 +51,7 @@
                         <a href="#projects">Projects</a>
                     </li>
                     <li>
-                        <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank">Resume</a>
+                        <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">Resume</a>
                     </li>
                     <li>
                         <a href="#contact">Contact Me</a>
@@ -119,9 +119,9 @@
                 </p>
                 <br>
                 <p style="text-align: left">Please find me on
-                    <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank" style="color: green">LinkedIn</a>, check out my
+                    <a href="https://www.linkedin.com/in/tracy-desserich/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">GitHub</a> library, or download my
-                    <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
@@ -153,7 +153,7 @@
                     <div class="thumbnail">
                         <img class="bunny" img src="./assets/bunny.jpg" />
                         <a href="https://codepen.io/tdesserich/pen/WMqbYV" target="blank" style="color: green">
-                            <h3>CSS Creature</h3>
+                            <h3 style="text-align: center">CSS Creature</h3>
                         </a>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <div class="thumbnail">
                         <img class="storefront" img src="./assets/VN-storefront.jpg" />
                         <a href="https://tdesserich.github.io/Storefront/" target="blank" style="color: green">
-                            <h3>Storefront</h3>
+                            <h3 style="text-align: center">Storefront</h3>
                         </a>
                     </div>
                 </div>
@@ -170,9 +170,8 @@
                 <div class="col-md-2">
                     <div class="thumbnail">
                         <img class="API" img src="./assets/API.jpg" />
-                        <!-- NEED WEBSITE HERE                     -->
-                        <a href="https://en.wikipedia.org/wiki/Mekong_Delta" target="blank" style="color: green">
-                            <h3 class="card-title">API Project</h3>
+                        <a href="https://star-wars-api-project.firebaseapp.com" target="blank" style="color: green">
+                            <h3 style="text-align: center">API Project</h3>
                         </a>
                     </div>
                 </div>
@@ -181,7 +180,7 @@
                     <div class="thumbnail">
                         <img class="JSrepo" img src="./assets/github.jpg" />
                         <a href="https://github.com/tdesserich" target="blank" style="color: green">
-                            <h3>GitHub</h3>
+                            <h3 style="text-align: center">GitHub</h3>
                         </a>
                     </div>
                 </div>
@@ -189,7 +188,7 @@
         </div>
     </section>
     <br>
-    <div class="contianer-fluid">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
                 <br>
@@ -205,6 +204,13 @@
         <div class="row">
             <div class="column-md-12 marginLeft">
                 <h2>Contact Me</h2>
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="column-md-12 marginLeft">
+                <p>Please email me at
+                    <a href="mailto:tdesserich@gmail.com" target="blank" style="color: green">tdesserich@gmail.com</a> or fill out the contact form below:</p>
             </div>
         </div>
         <br>
@@ -250,12 +256,12 @@
                 <div class="text-center text-md-right">
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <a href="https://drive.google.com/open?id=1_sSdoCfEI69jYfYKQoy4Dx1kFBP3plLy" target="blank">
+                            <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">
                                 <i class="fa fa-briefcase"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/tracy-desserich-902832116/" target="blank">
+                            <a href="https://www.linkedin.com/in/tracy-desserich/" target="blank">
                                 <i class="fa fa-linkedin"></i>
                             </a>
                         </li>
