--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <br>
     <div class="container-fluid">
         <div class="row">
-            <div class="column-md-12 marginLeft">
+            <div class="col-md-12 marginLeft">
                 <h2>About Me</h2>
             </div>
         </div>
@@ -140,7 +140,7 @@
         <br>
         <div class="container-fluid">
             <div class="row">
-                <div class="column-md-12 marginLeft">
+                <div class="col-md-12 marginLeft">
                     <h2>Projects</h2>
                 </div>
             </div>
@@ -202,15 +202,15 @@
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="column-md-12 marginLeft">
+            <div class="col-md-12 marginLeft">
                 <h2>Contact Me</h2>
             </div>
         </div>
         <br>
         <div class="row">
-            <div class="column-md-12 marginLeft">
+            <div class="col-md-12 marginLeft">
                 <p>Please email me at
-                    <a href="mailto:tdesserich@gmail.com" target="blank" style="color: green">tdesserich@gmail.com</a> or fill out the contact form below:</p>
+                    <a href="mailto:tdesserich@gmail.com" style="color: green">tdesserich@gmail.com</a> or fill out the contact form below:</p>
             </div>
         </div>
         <br>
@@ -252,7 +252,7 @@
     <!--Footer-->
     <div class="container-fluid footer">
         <div class="row">
-            <div class="col=md-12">
+            <div class="col-md-12">
                 <div class="text-center text-md-right">
                     <ul class="list-unstyled list-inline">
                         <li>
