card styling changes

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
     </header>
     <!-- Body -->
-    <section class="wow slideInLeft" data-wow-duration="2s" data-wow-delay="0.001s">
+    <section class="wow slideInLeft" data-wow-duration="1.5s" data-wow-delay="0.001s">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
@@ -120,7 +120,7 @@
     <!-- Portfolio   -->
     <div id="projects"></div>
     <hr>
-    <section class="wow slideInRight" data-wow-duration="2s" data-wow-delay="0.001s">
+    <section class="wow slideInRight" data-wow-duration="1.5s" data-wow-delay="0.001s">
         <br>
         <div class="container-fluid">
             <div class="row">
@@ -133,8 +133,8 @@
         <!-- CSS Creature -->
         <div class="container-fluid">
             <div class="card-deck">
-                <div class="col-md-4">
-                    <div class="card h-100 cardStyle">
+                <div class="col-md-4 cardStyle">
+                    <div class="card h-100">
 
                         <img class="card-img-top" src="./assets/bunny.jpg" alt="Card image cap" />
                         <div class="card-body">
@@ -149,8 +149,8 @@
                 </div>
                 <br/>
                 <!-- Storefront -->
-                <div class="col-md-4">
-                    <div class="card h-100 cardStyle">
+                <div class="col-md-4 cardStyle">
+                    <div class="card h-100 ">
 
                         <img class="card-img-top" src="./assets/VN-storefront.jpg" alt="Card image cap" />
                         <div class="card-body">
@@ -165,8 +165,8 @@
 
                 <br/>
                 <!-- API project  -->
-                <div class="col-md-4">
-                    <div class="card h-100 cardStyle">
+                <div class="col-md-4 cardStyle">
+                    <div class="card h-100 ">
 
                         <img class="card-img-top" src="./assets/API.jpg" alt="Card image cap" />
                         <div class="card-body">
@@ -180,8 +180,8 @@
                 </div>
                 <br/>
                 <!-- JS Library -->
-                <div class="col-md-4">
-                    <div class="card h-100 cardStyle">
+                <div class="col-md-4 cardStyle">
+                    <div class="card h-100 ">
 
                         <img class="card-img-top" img src="./assets/github.jpg" alt="Card image cap" />
 
