updated resume links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-item nav-link" href="#">Home</a>
                         <a class="nav-item nav-link" href="#aboutMe">About Me</a>
                         <a class="nav-item nav-link" href="#projects">Projects</a>
-                        <a class="nav-item nav-link" href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">Resume</a>
+                        <a class="nav-item nav-link" href="https://drive.google.com/file/d/1VQJoIpw70UZcPVETBhC6_Ij2L324ZVPH/view?usp=sharing" target="blank">Resume</a>
                         <a class="nav-item nav-link" href="#contact">Contact Me</a>
                     </form>      
             </div>
@@ -105,7 +105,7 @@
                 <p style="text-align: left">Please find me on
                     <a href="https://www.linkedin.com/in/tracy-desserich/" target="blank" style="color: green">LinkedIn</a>, check out my
                     <a href="https://github.com/tdesserich" target="blank" style="color: green">GitHub</a> library, or download my
-                    <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank" style="color: green">resume.</a>
+                    <a href="https://drive.google.com/file/d/1VQJoIpw70UZcPVETBhC6_Ij2L324ZVPH/view?usp=sharing" target="blank" style="color: green">resume.</a>
                 </p>
                 <br>
             </div>
@@ -179,6 +179,21 @@
                     </div>
                 </div>
                 <br/>
+                <!-- Health Tracker -->
+                <div class="col-md-4 cardStyle">
+                    <div class="card h-100 ">
+
+                        <img class="card-img-top" img src="./assets/healthtracker.jpg" alt="Card image cap" />
+
+                        <div class="card-body">
+                            <a href="https://tdesserich-healthtrackerclient.herokuapp.com/" target="blank" style="color: green">
+                                <h3>Medical Tracker</h3>
+                            </a>
+                            <!-- <p class="card-text">This is a longer card with supporting text below as a</p> -->
+                        </div>
+
+                    </div>
+                </div>
                 <!-- JS Library -->
                 <div class="col-md-4 cardStyle">
                     <div class="card h-100 ">
@@ -259,7 +274,7 @@
                 <div class="text-align-center">
                     <ul class="list-unstyled list-inline">
                         <li>
-                            <a href="https://drive.google.com/file/d/16pTzdFlj9bqROM-yahcYWZrSjsjbtdrn/view?usp=sharing" target="blank">
+                            <a href="https://drive.google.com/file/d/1VQJoIpw70UZcPVETBhC6_Ij2L324ZVPH/view?usp=sharing" target="blank">
                                 <i class="fa fa-briefcase"></i>
                             </a>
                         </li>
